--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "@babel/core": "^7.8.3",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-object-assign": "^7.8.3",
+    "@babel/plugin-transform-react-jsx": "^7.8.3",
     "@babel/polyfill": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
@@ -38,9 +41,11 @@
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-transform-redom-jsx": "^2.0.1",
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "core-js": "^3.6.4",
     "css-loader": "^3.4.2",
+    "d3": "^5.15.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
@@ -66,6 +71,8 @@
     "progress-bar-webpack-plugin": "^2.1.0",
     "prop-types": "^15.7.2",
     "react-hot-loader": "^4.12.19",
+    "react-router-hash-link": "^1.2.2",
+    "react-router-redux": "^4.0.8",
     "react-test-renderer": "^16.12.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
